--- a/keuzedeel/resources/css/app.css
+++ b/keuzedeel/resources/css/app.css
@@ -62,15 +62,6 @@ input:checked+.slider:before {
     border-radius: 50%;
 }
 
-#container-block > div {
-    height: 50%;
-    border: 4px;
-    width: 21.4vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 #container-block > div:nth-child(1),  #container-block > div:nth-child(5){
     border: 8px solid #E2539F;
 }
@@ -83,11 +74,6 @@ input:checked+.slider:before {
     border: 8px solid #f5d937;
 }
 
-#container-block > div > div {
-    height: 85%;
-    width: 17.5vw;
-}
-
 @media only screen and (max-width: 600px) {
     #container-block > div {
         width: 100%;
@@ -97,9 +83,56 @@ input:checked+.slider:before {
     #container-block > div > div {
         width: 65%;
     }
-
 }
 
-.test {
-    color: rgb(153, 251, 77);
+.card {
+    height: 85%;
+    width: 17.5vw;
+    position: relative;
+    cursor: pointer;
+    transform-style: preserve-3d;
+    transform-origin: center right;
+    transition: transform 0.6s;
+}
+
+.card.flip {
+    transform: translateX(-100%) rotateY(-180deg);
+}
+
+.card:hover {
+    transform: translateX(-100%) rotateY(-180deg);
+}
+
+.back {
+    transform: rotateY(180deg);
+}
+
+.parent {
+    height: 50%;
+    border: 4px;
+    width: 21.4vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    perspective: 800px;
+}
+
+.card-body {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-weight: 600;
+    font-size: 1.1em;
+    backface-visibility: hidden;
+  }
+
+
+#BMI-btn {
+    background: #E2539F;
+    color: white;
+    width: fit-content;
+    margin: auto;
+    padding: 5px 12px 5px 12px;
+    border-radius: 10px;
 }
